fix: alters stylings so nothing clips through and the arrow is not cut off

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -196,4 +196,8 @@
       }
     }
   }
+
+  .about-page {
+    padding-bottom: 25rem;
+  }
 }
